# h5darkframes

./: .gitignore  mypy.ini  pyproject.toml  readme.md
.github/workflows/: python_mypy.yml  tests.yaml
demo/: dummy_generate_config.py  dummy_generate_library.py
h5darkframes/: #types.py#  __init__.py  asi_zwo.py  camera.py  control_range.py  create_library.py  dummy_camera.py  executables.py  fuse_libraries.py  get_image.py  h5.py  image_library.py  image_stats.py  iteration.py  main.py  neighbors.py  progress.py  substract.py  toml_config.py  types.py  validation.py
scripts/: darkframes_stats.py
tests/: test_fusing.py  test_image_library.py  test_neighbors.py
