[tool.poetry]
name = "h5darkframes"
version = "0.1.3"
description = "python API for creating and using hdf5 darkframes libraries "
authors = [
	"Vincent Berenz <vberenz@tuebingen.mpg.de>",
]
packages = [
	 { include = "h5darkframes" },
] 
license = "BSD-3-Clause"
readme = "readme.md"
homepage = "https://github.com/MPI-IS/h5darkframes"
repository = "https://github.com/MPI-IS/h5darkframes"


[tool.poetry.dependencies]
python = "^3.10"
# Normal dependencies:
# Installable with both poetry and pip.
numpy = "^1.23.4"
alive-progress = "^2.4.1"
h5py = "^3.7.0"
toml = "^0.10.2"
opencv-python = "^4.6.0.66"
rich = "^12.6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# Dependencies for development:
# Only installable with poetry (NOT pip).
isort = "^5.13.2"
mypy = "^1.10.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
# Dependencies for testing:
# Only installable with poetry (NOT pip).
pytest = "^8.2.0"

[tool.poetry.scripts]
darkframes-zwoasi-config = 'h5darkframes.main:asi_zwo_darkframes_config'
darkframes-zwoasi-library = 'h5darkframes.main:asi_zwo_darkframes_library'
darkframes-info = 'h5darkframes.main:darkframes_info'
darkframes-display = 'h5darkframes.main:darkframe_display'
darkframes-fuse = 'h5darkframes.main:fuse'
darkframes-neighbors = 'h5darkframes.main:darkframe_neighbors'
darkframes-validation = 'h5darkframes.main:darkframes_validation'
darkframes-perform = 'h5darkframes.main:darkframes_perform'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
